# SP_COURSE_WORK

./: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/loggin/: EventLogSink.cpp  EventLogSink.h  FileLogger.cpp  FileLogger.h  Logger.cpp  Logger.h
src/core/registry/: RegistryFacade.cpp  RegistryFacade.h  RegistryHelpers.cpp  RegistryHelpers.h  RegistryKey.cpp  RegistryKey.h
src/core/registry/facade/: ICacheManager.cpp  ICacheManager.h  IKeyManager.cpp  IKeyManager.h  IStatsManager.cpp  IStatsManager.h  IValueManager.cpp  IValueManager.h
src/gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Messages.h  RegistryTreeView.cpp  RegistryTreeView.h  RegistryValuesView.cpp  RegistryValuesView.h
src/threads/: CMakeLists.txt  IThreadManager.h  StdThreadPool.cpp  StdThreadPool.h  WinThreadPoolAdapter.cpp  WinThreadPoolAdapter.h
